--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 
 services:
   db:
@@ -9,7 +9,7 @@ services:
       - ./.env
 
   web:
-    image: lagmas/yamdb_final:v1.2
+    image: lagmas/yamdb_final:latest
     restart: always
     volumes:
       - static_value:/app/static/
