--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -19,11 +19,18 @@ jobs:
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         cd api_yamdb/
-        pip install -r requirements.txt 
+        pip install -r requirements.txt
+
     - name: Test with flake8 and django tests
       run: |
         cd api_yamdb/
         python manage.py test
+
+    - name: Test with pytest tests
+      run: |
+        cd ./..
+        pytest
+ 
   build_and_push_to_docker_hub:
       name: Push Docker image to Docker Hub
       runs-on: ubuntu-latest
